--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.5.1",
+    "prop-types": "^15.7.2"
   }
 }
