--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@styled-icons/material-outlined": "^10.34.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
